--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <nav class="menu">
             <ul>
                 <li class="menu-item">
-                    <a href="#ingredients">Ингредиенты</a>
+                    <a href="ingredients.html">Ингредиенты</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#dogs">Для собак</a>
+                    <a href="for_dogs.html">Для собак</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#cats">Для кошек</a>
+                    <a href="for_cats.html">Для кошек</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#contacts">Контакты</a>
+                    <a href="contacts.html">Контакты</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#where_by"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a>
+                    <a href="where_by.html"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a>
                 </li>
             </ul>
         </nav>
