--- a/for_dogs.html
+++ b/for_dogs.html
@@ -59,11 +59,14 @@
 <section class="container_dogs">
     <div class="text_center">Щенки / Юниоры</div>
     <div class="container_corm">
-        <div class="corm_box">
-            <img class="corm_image" src="images/corm/IMG_0857.png">
-            <div class="corm_text_main">Ягненок с гранатом</div>
-            <div class="corm_text">Для щенков мелких пород</div>
-        </div>
+        <a href="dogs/small_lamb_pomegranate.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_0857.png">
+                <div class="corm_text_main">Ягненок с гранатом</div>
+                <div class="corm_text">Для щенков мелких пород</div>
+            </div>
+        </a>
+
         <div class="corm_box">
             <img class="corm_image" src="images/corm/IMG_0875.png">
             <div class="corm_text_main">Ягненок с гранатом</div>
