--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     Гипоаллергенный корм
                 </div>
                 <div class="container_button_main">
-                    <div class="button braun">Для собак</div>
+                    <a href="for_dogs.html"><div class="button braun">Для собак</div></a>
                     <div class="button braun">Для кошек</div>
                 </div>
                 <div class="down_main_text">
