--- a/dogs/medium_lamb_pomegranate.html
+++ b/dogs/medium_lamb_pomegranate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ягненок гранат для средних щенков</title>
+  <title>Ягненок гранат для мелких щенков</title>
 
   <link rel="stylesheet" href="../styles/style.css">
 
@@ -13,7 +13,7 @@
 <header class="header">
   <div class="container">
     <div class="logo">
-      <a href="../index.html"><img src="../logo/logo.svg" alt="logo"></a>
+      <a href="../index.html"><div class="logo_text">PREZENT</div></a>
     </div>
     <nav class="menu">
       <ul>
@@ -37,11 +37,105 @@
   </div>
 </header>
 
+<section class="container_main">
+  <div class="banner_food">
+    <div class="container_main_banner">
+      <img class="main_banner" src="../images/product-banner-1.webp">
+    </div>
+    <div class="container_text">
+      <div class="block_text_food">
+        <div class="main_text">
+          Ягненок гранат для щенков средних пород
+        </div>
+        <div class="second_main_text">
+          Для щенков всех пород с 3 недель, беременных и кормящих собак.
+        </div>
+        <div class="down_main_text_food">
+          Идеально подходит для нежной пищеварительной системы щенков. Высокое содержание необходимых протеинов, полезных жиров, аминокислот и витаминов гарантирует оптимальную энергетическую ценность для здорового роста и развития щенков.
+          <br><br>
+          Тщательно отобранные, натуральные гипоаллергенные ингредиенты, помогают предотвратить аллергические реакции и пищевую непереносимость, обеспечивая иммунное и пищеварительное здоровье.
+        </div>
+      </div>
+      <div class="block_image">
+        <img class="block_image_corm" src="../images/corm/IMG_0870.png">
+      </div>
+    </div>
+  </div>
+</section>
 
+<section class="container_section">
+  <div class="container_why">
+    <div class="row_why corm_gap">
+      <div class="text_row not_main">
+        <div class="text_view" onclick="openList('block1', 'item_one')">
+          <img class="icon_check" src="../logo/check-icon.svg">
+          ДО 70% МЯСА И ЖИВОТНЫХ ИНГРЕДИЕНТОВ
+          <img id="item_one" class="arrow_accord_down" src="../images/arrow-accord-down.svg">
+        </div>
+        <div class="text_not_view" id="block1">
+          Все наши корма основаны на мясе и содержат только высококачественные животные белки. Животный белок очень ценен и содержит все незаменимые аминокислоты для вашего питомца и полностью удовлетворит его биологические потребности в мясном питании.
+        </div>
+      </div>
+      <div class="text_row not_main">
+        <div class="text_view" onclick="openList('block2', 'item_two')">
+          <img class="icon_check" src="../logo/check-icon.svg">
+          ТОЛЬКО МЯСО БЕЗ СУБПРОДУКТОВ
+          <img id="item_two" class="arrow_accord_down" src="../images/arrow-accord-down.svg">
+        </div>
+        <div class="text_not_view" id="block2">
+          Мы используем мясо высшего сорта, без костей и субпродуктов. Это гарантирует, что ваш питомец получает высокопитательный, легко усвояемый источник белка.
+        </div>
+      </div>
+      <div class="text_row not_main">
+        <div class="text_view" onclick="openList('block3', 'item_tree')">
+          <img class="icon_check" src="../logo/check-icon.svg">
+          ГИПОАЛЛЕРГЕННЫЕ ИНГРЕДИЕНТЫ
+          <img id="item_tree" class="arrow_accord_down" src="../images/arrow-accord-down.svg">
+        </div>
+        <div class="text_not_view" id="block3">
+          Тщательно отобранные, натуральные гипоаллергенные ингредиенты, помогают предотвратить аллергические реакции и пищевую непереносимость, обеспечивая иммунное и пищеварительное здоровье.
+        </div>
+      </div>
+      <div class="text_row not_main">
+        <div class="text_view" onclick="openList('block4', 'item_four')">
+          <img class="icon_check" src="../logo/check-icon.svg">
+          ТОЛЬКО ОДИН ИСТОЧНИК УГЛЕВОДОВ
+          <img id="item_four" class="arrow_accord_down" src="../images/arrow-accord-down.svg">
+        </div>
+        <div class="text_not_view" id="block4">
+          Мы используем один источник углеводов, чтобы минимизировать риск пищевой непереносимости и аллергии. Бурый рис в низкозерновой линейке и батат в беззерновой.
+        </div>
+      </div>
+      <div class="text_row not_main">
+        <div class="text_view" onclick="openList('block5', 'item_five')">
+          <img class="icon_check" src="../logo/check-icon.svg">
+          НИЗКАЯ НОРМА КОРМЛЕНИЯ
+          <img id="item_five" class="arrow_accord_down" src="../images/arrow-accord-down.svg">
+        </div>
+        <div class="text_not_view" id="block5">
+          Благодаря питательности натуральных ингредиентов и сбалансированному составу, у наших кормов низкая норма кормления. Поэтому ваш питомец будет наслаждаться каждой упаковкой корма дольше обычного.
+        </div>
+      </div>
+      <div class="text_row not_main">
+        <div class="text_view" onclick="openList('block6', 'item_six')">
+          <img class="icon_check" src="../logo/check-icon.svg">
+          БЕЗ КУРИЦЫ, ГОРОХА, КУКУРУЗЫ, СВЕКЛЫ
+          <img id="item_six" class="arrow_accord_down" src="../images/arrow-accord-down.svg">
+        </div>
+        <div class="text_not_view" id="block6">
+          Не содержит: кукурузу, пшеницу, свеклу, горох, субпродукты, яйца, курицу, куриный жир, соль, сахар, красители, ароматизаторы, сою и ГМО.
+        </div>
+      </div>
+    </div>
+    <div class="container_image_why">
+      <img class="image_why" src="../images/why-img.png">
+    </div>
+  </div>
+</section>
 
 <footer class="footer">
   <div class="container_footer">
-    <img class="logo" src="../logo/logo-footer.svg">
+    <div class="logo_text footer_logo">PREZENT</div>
     <div class="contacts_container">
       <div class="contacts_text">Контакты</div>
       <div class="contacts_text"><img class="contacts_icon" src="../logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
