--- a/for_dogs.html
+++ b/for_dogs.html
@@ -14,7 +14,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><img src="logo/logo.svg" alt="logo"></a>
+            <a href="index.html"><div class="logo_text">PREZENT</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -67,11 +67,14 @@
             </div>
         </a>
 
-        <div class="corm_box">
-            <img class="corm_image" src="images/corm/IMG_0875.png">
-            <div class="corm_text_main">Ягненок с гранатом</div>
-            <div class="corm_text">Для щенков средних пород</div>
-        </div>
+        <a href="dogs/medium_lamb_pomegranate.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_0875.png">
+                <div class="corm_text_main">Ягненок с гранатом</div>
+                <div class="corm_text">Для щенков средних пород</div>
+            </div>
+        </a>
+
         <div class="corm_box">
             <img class="corm_image" src="images/corm/IMG_0883.png">
             <div class="corm_text_main">Ягненок с гранатом</div>
@@ -97,7 +100,7 @@
 
 <footer class="footer">
     <div class="container_footer">
-        <img class="logo" src="logo/logo-footer.svg">
+        <div class="logo_text footer_logo">PREZENT</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
