--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><img src="logo/logo.svg" alt="logo"></a>
+            <a href="index.html"><div class="logo_text">PREZENT</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -34,8 +34,16 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu_mobile" onclick="openMenu()"></div>
     </div>
 </header>
+<div id="container_mobile" class="container_mobile">
+    <div class="button_linc_mobile"><a href="ingredients.html">Ингредиенты</a></div>
+    <div class="button_linc_mobile"><a href="for_dogs.html">Для собак</a></div>
+    <div class="button_linc_mobile"><a href="for_cats.html">Для кошек</a></div>
+    <div class="button_linc_mobile"><a href="contacts.html">Контакты</a></div>
+    <div class="button_linc_mobile"><a href="where_by.html"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a></div>
+</div>
 
 <section class="container_main">
     <div class="banner">
@@ -58,6 +66,27 @@
                     Профессиональное питание создано помочь питомцам избежать пищевой
                     аллергии и обеспечить потребность в мясном питании на долгие годы
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="main_mobile">
+    <div class="text_mobile">
+        <div class="block_text">
+            <div class="main_text">
+                ЗДОРОВОЕ ПИТАНИЕ БЕЗ КОМПРОМИССОВ
+            </div>
+            <div class="second_main_text">
+                Гипоаллергенный корм
+            </div>
+            <div class="container_button_main">
+                <a href="for_dogs.html"><div class="button braun">Для собак</div></a>
+                <div class="button braun">Для кошек</div>
+            </div>
+            <div class="down_main_text">
+                Профессиональное питание создано помочь питомцам избежать пищевой
+                аллергии и обеспечить потребность в мясном питании на долгие годы
             </div>
         </div>
     </div>
@@ -192,7 +221,7 @@
 
 <footer class="footer">
     <div class="container_footer">
-        <img class="logo" src="logo/logo-footer.svg">
+        <div class="logo_text footer_logo">PREZENT</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
