--- a/where_by.html
+++ b/where_by.html
@@ -13,7 +13,7 @@
 <header class="header">
   <div class="container">
     <div class="logo">
-      <a href="index.html"><img src="logo/logo.svg" alt="logo"></a>
+      <a href="index.html"><div class="logo_text">PREZENT</div></a>
     </div>
     <nav class="menu">
       <ul>
@@ -41,7 +41,7 @@
 
 <footer class="footer">
   <div class="container_footer">
-    <img class="logo" src="logo/logo-footer.svg">
+    <div class="logo_text footer_logo">PREZENT</div>
     <div class="contacts_container">
       <div class="contacts_text">Контакты</div>
       <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
