--- a/dogs/small_lamb_pomegranate.html
+++ b/dogs/small_lamb_pomegranate.html
@@ -57,7 +57,33 @@
         </div>
       </div>
       <div class="block_image">
-        <img class="block_image_corm" src="../images/corm/IMG_0851.png">
+        <img class="block_image_corm" src="../images/corm/IMG_0857.png">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container_section">
+  <div class="container_corm">
+    <div class="corm_box by_corm">
+      <img class="corm_image" src="../images/corm/IMG_0860.png">
+      <div class="corm_text_main">Мешок 5 кг</div>
+      <div class="corm_text_main">2500 ₽*</div>
+      <div class="container_by_corm">
+        <a href="https://api.whatsapp.com/send/?phone=79962475133&text=Здравствуйте%2C+,+хочу+заказать+корм+Ягненок+гранат+для+мелких+пород+весом+5+кг">
+          <button class="button_by_corm">Купить</button>
+        </a>
+      </div>
+    </div>
+
+    <div class="corm_box by_corm">
+      <img class="corm_image" src="../images/corm/IMG_0851.png">
+      <div class="corm_text_main">15 кг</div>
+      <div class="corm_text_main">5500 ₽*</div>
+      <div class="container_by_corm">
+        <a href="https://api.whatsapp.com/send/?phone=79962475133&text=Здравствуйте%2C+,+хочу+заказать+корм+Ягненок+гранат+для+мелких+пород+весом+15+кг">
+          <button class="button_by_corm">Купить</button>
+        </a>
       </div>
     </div>
   </div>
