--- a/for_dogs.html
+++ b/for_dogs.html
@@ -61,7 +61,7 @@
     <div class="container_corm">
         <a href="dogs/small_lamb_pomegranate.html">
             <div class="corm_box">
-                <img class="corm_image" src="images/corm/IMG_0857.png">
+                <img class="corm_image" src="images/corm/IMG_3250.JPG">
                 <div class="corm_text_main">Ягненок с гранатом</div>
                 <div class="corm_text">Для щенков мелких пород</div>
             </div>
@@ -96,6 +96,8 @@
             <div class="corm_text">Для щенков крупных пород</div>
         </div>
     </div>
+    <div class="text_center">Для средних пород</div>
+    <div class="text_center">Для крупных пород</div>
 </section>
 
 <footer class="footer">
