--- a/ingredients.html
+++ b/ingredients.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><div class="logo_text">PREZENT</div></a>
+            <a href="index.html"><div class="logo_text">ПРЕЗЕНТ</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -34,21 +34,29 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu_mobile" onclick="openMenu()"></div>
     </div>
 </header>
+<div id="container_mobile" class="container_mobile">
+    <div class="button_linc_mobile"><a href="ingredients.html">Ингредиенты</a></div>
+    <div class="button_linc_mobile"><a href="for_dogs.html">Для собак</a></div>
+    <div class="button_linc_mobile"><a href="for_cats.html">Для кошек</a></div>
+    <div class="button_linc_mobile"><a href="contacts.html">Контакты</a></div>
+    <div class="button_linc_mobile"><a href="where_by.html"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a></div>
+</div>
 
 
 
 <footer class="footer">
     <div class="container_footer">
-        <div class="logo_text footer_logo">PREZENT</div>
+        <div class="logo_text footer_logo">ПРЕЗЕНТ</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/phone.png" alt="phone">Заказать звонок</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/letter.png" alt="letter">Задать вопрос</div>
         </div>
-        <div class="kazak_text">© PREZENT 2023</div>
+        <div class="kazak_text">© ПРЕЗЕНТ 2023</div>
     </div>
 </footer>
 
