--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><div class="logo_text">PREZENT</div></a>
+            <a href="index.html"><div class="logo_text">ПРЕЗЕНТ</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -34,21 +34,85 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu_mobile" onclick="openMenu()"></div>
     </div>
 </header>
+<div id="container_mobile" class="container_mobile">
+    <div class="button_linc_mobile"><a href="ingredients.html">Ингредиенты</a></div>
+    <div class="button_linc_mobile"><a href="for_dogs.html">Для собак</a></div>
+    <div class="button_linc_mobile"><a href="for_cats.html">Для кошек</a></div>
+    <div class="button_linc_mobile"><a href="contacts.html">Контакты</a></div>
+    <div class="button_linc_mobile"><a href="where_by.html"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a></div>
+</div>
 
+<section class="container_main">
+    <div class="banner contacts">
+        <div class="container_main_banner">
+            <img class="main_banner" src="images/contacts-banner5000.webp">
+        </div>
+        <div class="container_contacts">
+            <div class="text_main_contacts">Наши офисы</div>
+            <div class="container_address">
+                <div class="box_address">
+                    <div class="text_contacts">Пенза</div>
+                    <div class="box_text_contacts">
+                        <div class="text_contacts text_address">Адрес:</div>
+                        <div class="text_contacts text_address_none">тут будет какой то адресс</div>
+                    </div>
+                    <div class="box_text_contacts">
+                        <div class="text_contacts text_address">Телефон:</div>
+                        <div class="text_contacts text_address_none"> +7 999 999 99 99</div>
+                    </div>
+                    <div class="box_text_contacts">
+                        <div class="text_contacts text_address">Время работы:</div>
+                        <div class="text_contacts text_address_none">9:00-18:00 (пн-пт)</div>
+                    </div>
+                </div>
 
+                <div class="box_address">
+                    <div class="text_contacts">Саранск</div>
+                    <div class="box_text_contacts">
+                        <div class="text_contacts text_address">Адрес:</div>
+                        <div class="text_contacts text_address_none">тут будет какой то адресс но только другой</div>
+                    </div>
+                    <div class="box_text_contacts">
+                        <div class="text_contacts text_address">Телефон:</div>
+                        <div class="text_contacts text_address_none"> +7 999 999 99 99</div>
+                    </div>
+                    <div class="box_text_contacts">
+                        <div class="text_contacts text_address">Время работы:</div>
+                        <div class="text_contacts text_address_none">9:00-18:00 (пн-пт)</div>
+                    </div>
+                </div>
+            </div>
+            <div class="under_text_contacts">
+                Закажите обратный звонок или напишите нам! Мы свяжемся с вами в будние дни с 9:00 до 18:00 по московскому времени.
+            </div>
+            <div class="container_button_main">
+                <a href="tel:+7 (996) 247-51-33">
+                    <div class="button braun">
+                        <img class="contacts_icon" src="logo/call-icon.svg" alt="call-icon">
+                        Уточнить у консультанта
+                    </div>
+                </a>
+                <a href="https://api.whatsapp.com/send/?phone=79962475133&text=Здравствуйте+,+у+меня+вопрос+по+ассортименту+корма">
+                    <div class="button braun">Задать вопрос</div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
 <footer class="footer">
     <div class="container_footer">
-        <div class="logo_text footer_logo">PREZENT</div>
+        <div class="logo_text footer_logo">ПРЕЗЕНТ</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/phone.png" alt="phone">Заказать звонок</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/letter.png" alt="letter">Задать вопрос</div>
         </div>
-        <div class="kazak_text">© PREZENT 2023</div>
+        <div class="kazak_text">© ПРЕЗЕНТ 2023</div>
     </div>
 </footer>
 
