--- a/for_cats.html
+++ b/for_cats.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><div class="logo_text">PREZENT</div></a>
+            <a href="index.html"><div class="logo_text">ПРЕЗЕНТ</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -34,21 +34,67 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu_mobile" onclick="openMenu()"></div>
     </div>
 </header>
+<div id="container_mobile" class="container_mobile">
+    <div class="button_linc_mobile"><a href="ingredients.html">Ингредиенты</a></div>
+    <div class="button_linc_mobile"><a href="for_dogs.html">Для собак</a></div>
+    <div class="button_linc_mobile"><a href="for_cats.html">Для кошек</a></div>
+    <div class="button_linc_mobile"><a href="contacts.html">Контакты</a></div>
+    <div class="button_linc_mobile"><a href="where_by.html"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a></div>
+</div>
 
+<section class="container_main">
+    <div class="banner_dogs">
+        <div class="container_main_banner">
+            <img class="main_banner" src="images/catalog-banner-cats5000.webp">
+        </div>
+        <div class="container_text">
+            <div class="block_text">
+                <div class="main_text">
+                    КОРМА ДЛЯ КОШЕК
+                </div>
+                <div class="down_main_text">
+                    Подберите идеально подходящий вашей кошке полнорационный гипоаллергенный сухой корм.
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="container_dogs">
+    <div class="text_center">Для кошек</div>
+    <div class="container_corm">
+        <a href="cats/cats_duck_with_apples.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3264.JPG">
+                <div class="corm_text_main">Утка с яблоками</div>
+                <div class="corm_text">Для взрослых кошек</div>
+            </div>
+        </a>
+
+        <a href="cats/cats_rabbit_with_zucchini.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3265.JPG">
+                <div class="corm_text_main">Кролик с кабачками</div>
+                <div class="corm_text">Для взрослых кошек</div>
+            </div>
+        </a>
+    </div>
+</section>
 
 
 <footer class="footer">
     <div class="container_footer">
-        <div class="logo_text footer_logo">PREZENT</div>
+        <div class="logo_text footer_logo">ПРЕЗЕНТ</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/phone.png" alt="phone">Заказать звонок</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/letter.png" alt="letter">Задать вопрос</div>
         </div>
-        <div class="kazak_text">© PREZENT 2023</div>
+        <div class="kazak_text">© ПРЕЗЕНТ 2023</div>
     </div>
 </footer>
 
