--- a/for_dogs.html
+++ b/for_dogs.html
@@ -14,7 +14,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><div class="logo_text">PREZENT</div></a>
+            <a href="index.html"><div class="logo_text">ПРЕЗЕНТ</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -35,8 +35,16 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu_mobile" onclick="openMenu()"></div>
     </div>
 </header>
+<div id="container_mobile" class="container_mobile">
+    <div class="button_linc_mobile"><a href="ingredients.html">Ингредиенты</a></div>
+    <div class="button_linc_mobile"><a href="for_dogs.html">Для собак</a></div>
+    <div class="button_linc_mobile"><a href="for_cats.html">Для кошек</a></div>
+    <div class="button_linc_mobile"><a href="contacts.html">Контакты</a></div>
+    <div class="button_linc_mobile"><a href="where_by.html"><img class="maps_mark" src="logo/mapsmark.png" alt="mapsMark">Где купить</a></div>
+</div>
 
 <section class="container_main">
     <div class="banner_dogs">
@@ -49,7 +57,7 @@
                     КОРМА ДЛЯ СОБАК
                 </div>
                 <div class="down_main_text">
-                    Подберите идеально подходящий вашей собаке полнорационный гипоаллергенный сухой корм класса холистик.
+                    Подберите идеально подходящий вашей собаке полнорационный гипоаллергенный сухой корм.
                 </div>
             </div>
         </div>
@@ -59,57 +67,187 @@
 <section class="container_dogs">
     <div class="text_center">Щенки / Юниоры</div>
     <div class="container_corm">
-        <a href="dogs/small_lamb_pomegranate.html">
+        <a href="dogs/puppies/puppies_lamb_pomegranate.html">
             <div class="corm_box">
-                <img class="corm_image" src="images/corm/IMG_3250.JPG">
+                <img class="corm_image" src="images/corm/IMG_3272.JPG">
                 <div class="corm_text_main">Ягненок с гранатом</div>
                 <div class="corm_text">Для щенков мелких пород</div>
             </div>
         </a>
 
-        <a href="dogs/medium_lamb_pomegranate.html">
+        <a href="dogs/puppies/puppiesl_medium_lamb_pomegranate.html">
             <div class="corm_box">
-                <img class="corm_image" src="images/corm/IMG_0875.png">
+                <img class="corm_image" src="images/corm/IMG_3273.JPG">
                 <div class="corm_text_main">Ягненок с гранатом</div>
                 <div class="corm_text">Для щенков средних пород</div>
             </div>
         </a>
 
-        <div class="corm_box">
-            <img class="corm_image" src="images/corm/IMG_0883.png">
-            <div class="corm_text_main">Ягненок с гранатом</div>
-            <div class="corm_text">Для щенков крупных пород</div>
-        </div>
-        <div class="corm_box">
-            <img class="corm_image" src="images/corm/IMG_0904.png">
-            <div class="corm_text_main">С говядиной</div>
-            <div class="corm_text">Для щенков мелких пород</div>
-        </div>
-        <div class="corm_box">
-            <img class="corm_image" src="images/corm/IMG_0912.png">
-            <div class="corm_text_main">С говядиной</div>
-            <div class="corm_text">Для щенков средних пород</div>
-        </div>
-        <div class="corm_box">
-            <img class="corm_image" src="images/corm/IMG_0940.png">
-            <div class="corm_text_main">С говядиной</div>
-            <div class="corm_text">Для щенков крупных пород</div>
-        </div>
+        <a href="dogs/puppies/puppies_adult_lamb_pomegranate.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3274.JPG">
+                <div class="corm_text_main">Ягненок с гранатом</div>
+                <div class="corm_text">Для щенков крупных пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/puppies/puppies_beef.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3269.JPG">
+                <div class="corm_text_main">С говядиной</div>
+                <div class="corm_text">Для щенков мелких пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/puppies/puppies_medium_beef.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3270.JPG">
+                <div class="corm_text_main">С говядиной</div>
+                <div class="corm_text">Для щенков средних пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/puppies/puppies_adult_beef.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3271.JPG">
+                <div class="corm_text_main">С говядиной</div>
+                <div class="corm_text">Для щенков крупных пород</div>
+            </div>
+        </a>
     </div>
+
+    <div class="text_center">Для мелких пород</div>
+    <div class="container_corm">
+        <a href="dogs/small/small_beef.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3248.JPG">
+                <div class="corm_text_main">С говядиной</div>
+                <div class="corm_text">Для взрослых собак мелких пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/small/small_fish.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3249.JPG">
+                <div class="corm_text_main">С рыбой</div>
+                <div class="corm_text">Для собак мелких пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/small/small_lamb_pomegranate.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3250.JPG">
+                <div class="corm_text_main">Ягненок гранат</div>
+                <div class="corm_text">Для взрослых собак мелких пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/small/small_duck_with_apples.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3251.JPG">
+                <div class="corm_text_main">Утка с яблоками</div>
+                <div class="corm_text">Для взрослых собак мелких пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/small/small_rabbit_with_zucchini.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3252.JPG">
+                <div class="corm_text_main">Кролик с кабачками</div>
+                <div class="corm_text">Для взрослых собак мелких пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/small/small_reindeer_with_cranberries.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3253.JPG">
+                <div class="corm_text_main">Северный олень с клюквой</div>
+                <div class="corm_text">Для взрослых собак мелких пород</div>
+            </div>
+        </a>
+    </div>
+
     <div class="text_center">Для средних пород</div>
+    <div class="container_corm">
+        <a href="dogs/middle/middle_beef.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3255.JPG">
+                <div class="corm_text_main">С говядиной</div>
+                <div class="corm_text">Для собак средних пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/middle/middle_fish.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3256.JPG">
+                <div class="corm_text_main">С рыбой</div>
+                <div class="corm_text">Для взрослых собак средних пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/middle/middle_lamb_pomegranate.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3257.JPG">
+                <div class="corm_text_main">Ягненок с гранатом</div>
+                <div class="corm_text">Для взрослых собак средних пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/middle/middle_duck_with_apples.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3259.JPG">
+                <div class="corm_text_main">Утка с яблоками</div>
+                <div class="corm_text">Для взрослых собак средних пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/middle/middle_rabbit_with_zucchini.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3258.JPG">
+                <div class="corm_text_main">Кролик с кабачками</div>
+                <div class="corm_text">Для взрослых собак средних пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/middle/middle_reindeer_with_cranberries.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3260.JPG">
+                <div class="corm_text_main">Северный олень с клюквой</div>
+                <div class="corm_text">Для взрослых собак средних пород</div>
+            </div>
+        </a>
+    </div>
+
     <div class="text_center">Для крупных пород</div>
+    <div class="container_corm">
+        <a href="dogs/adult/adult_beef.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3262.JPG">
+                <div class="corm_text_main">С говядиной</div>
+                <div class="corm_text">Для собак врослых пород</div>
+            </div>
+        </a>
+
+        <a href="dogs/adult/adult_lamb_pomegranate.html">
+            <div class="corm_box">
+                <img class="corm_image" src="images/corm/IMG_3263.JPG">
+                <div class="corm_text_main">Ягненок гранат</div>
+                <div class="corm_text">Для собак врослых пород</div>
+            </div>
+        </a>
+    </div>
 </section>
 
 <footer class="footer">
     <div class="container_footer">
-        <div class="logo_text footer_logo">PREZENT</div>
+        <div class="logo_text footer_logo">ПРЕЗЕНТ</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/phone.png" alt="phone">Заказать звонок</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/letter.png" alt="letter">Задать вопрос</div>
         </div>
-        <div class="kazak_text">© PREZENT 2023</div>
+        <div class="kazak_text">© ПРЕЗЕНТ 2023</div>
     </div>
 </footer>
 
