--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div class="container">
         <div class="logo">
-            <a href="index.html"><div class="logo_text">PREZENT</div></a>
+            <a href="index.html"><div class="logo_text">ПРЕЗЕНТ</div></a>
         </div>
         <nav class="menu">
             <ul>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="container_button_main">
                     <a href="for_dogs.html"><div class="button braun">Для собак</div></a>
-                    <div class="button braun">Для кошек</div>
+                    <a href="for_cats.html"><div class="button braun">Для кошек</div></a>
                 </div>
                 <div class="down_main_text">
                     Профессиональное питание создано помочь питомцам избежать пищевой
@@ -221,14 +221,14 @@
 
 <footer class="footer">
     <div class="container_footer">
-        <div class="logo_text footer_logo">PREZENT</div>
+        <div class="logo_text footer_logo">ПРЕЗЕНТ</div>
         <div class="contacts_container">
             <div class="contacts_text">Контакты</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/mapsWhite.png" alt="mapsWhite">Где купить</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/phone.png" alt="phone">Заказать звонок</div>
             <div class="contacts_text"><img class="contacts_icon" src="logo/letter.png" alt="letter">Задать вопрос</div>
         </div>
-        <div class="kazak_text">© PREZENT 2023</div>
+        <div class="kazak_text">© ПРЕЗЕНТ 2023</div>
     </div>
 </footer>
 
